force-app/main/default/objects/Opportunity/fields/Scope_District__c.field-meta.xml
<CustomField>
    <fullName>Scope_District__c</fullName>
    <label>Scope District</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>