force-app/main/default/objects/Opportunity/fields/Scope_ID__c.field-meta.xml
<CustomField>
    <fullName>Scope_ID__c</fullName>
    <label>Scope Id</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>