force-app/main/default/objects/Opportunity/fields/Scope_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Scope_Schedule_Date__c</fullName>
    <label>Scope Schedule Date</label>
    <type>Text</type>
    <length>255</length>
</CustomField>