force-app/main/default/objects/Opportunity/fields/Score_Offer__c.field-meta.xml
<CustomField>
    <fullName>Score_Offer__c</fullName>
    <label>Score Offer</label>
    <type>Text</type>
    <length>255</length>
</CustomField>