force-app/main/default/objects/Opportunity/fields/Segment_Code__c.field-meta.xml
<CustomField>
    <fullName>Segment_Code__c</fullName>
    <label>Segment Code</label>
    <type>Text</type>
    <length>255</length>
</CustomField>