force-app/main/default/objects/Opportunity/fields/Service_Statement_Account__c.field-meta.xml
<CustomField>
    <fullName>Service_Statement_Account__c</fullName>
    <label>Service Statement Account</label>
    <type>Text</type>
    <length>255</length>
</CustomField>