force-app/main/default/objects/Opportunity/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>