force-app/main/default/objects/Opportunity/fields/Size_Token_Division__c.field-meta.xml
<CustomField>
    <fullName>Size_Token_Division__c</fullName>
    <label>Size Token Division</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>