force-app/main/default/objects/Opportunity/fields/Small_Business_Total__c.field-meta.xml
<CustomField>
    <fullName>Small_Business_Total__c</fullName>
    <description>Total for small business deals</description>
    <label>Small Business Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>