force-app/main/default/objects/Opportunity/fields/Small_Deal_Processed__c.field-meta.xml
<CustomField>
    <fullName>Small_Deal_Processed__c</fullName>
    <description>Tracks if small deal was processed</description>
    <label>Small Deal Processed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>