force-app/main/default/objects/Opportunity/fields/Source_Exception_Metric__c.field-meta.xml
<CustomField>
    <fullName>Source_Exception_Metric__c</fullName>
    <label>Source Exception Metric</label>
    <type>Text</type>
    <length>255</length>
</CustomField>