force-app/main/default/objects/Opportunity/fields/Special_Admin_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Special_Admin_Adjustment__c</fullName>
    <description>Special adjustment for admin users</description>
    <label>Special Admin Adjustment</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>