force-app/main/default/objects/Opportunity/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <label>Standard</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>