force-app/main/default/objects/Opportunity/fields/Standard_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Standard_Percentage__c</fullName>
    <label>Standard Percentage</label>
    <type>Text</type>
    <length>255</length>
</CustomField>