force-app/main/default/objects/Opportunity/fields/State_Problem__c.field-meta.xml
<CustomField>
    <fullName>State_Problem__c</fullName>
    <label>State Problem</label>
    <type>Text</type>
    <length>255</length>
</CustomField>