force-app/main/default/objects/Opportunity/fields/State_Stage__c.field-meta.xml
<CustomField>
    <fullName>State_Stage__c</fullName>
    <label>State Stage</label>
    <type>Text</type>
    <length>255</length>
</CustomField>