force-app/main/default/objects/Opportunity/fields/Statement_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Statement_Procedure__c</fullName>
    <label>Statement Procedure</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>