force-app/main/default/objects/Opportunity/fields/Status_Portal__c.field-meta.xml
<CustomField>
    <fullName>Status_Portal__c</fullName>
    <label>Status Portal</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>