force-app/main/default/objects/Opportunity/fields/Target_Customer__c.field-meta.xml
<CustomField>
    <fullName>Target_Customer__c</fullName>
    <label>Target Customer</label>
    <type>Text</type>
    <length>255</length>
</CustomField>