force-app/main/default/objects/Opportunity/fields/Tech_Industry_Discount__c.field-meta.xml
<CustomField>
    <fullName>Tech_Industry_Discount__c</fullName>
    <description>Discount for technology industry</description>
    <label>Tech Industry Discount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>