force-app/main/default/objects/Opportunity/fields/Tender__c.field-meta.xml
<CustomField>
    <fullName>Tender__c</fullName>
    <label>Tender</label>
    <type>Text</type>
    <length>255</length>
</CustomField>