force-app/main/default/objects/Opportunity/fields/Tender_Platform_Stage__c.field-meta.xml
<CustomField>
    <fullName>Tender_Platform_Stage__c</fullName>
    <label>Tender Platform Stage</label>
    <type>Text</type>
    <length>255</length>
</CustomField>