force-app/main/default/objects/Opportunity/fields/Term_ID_Platform__c.field-meta.xml
<CustomField>
    <fullName>Term_ID_Platform__c</fullName>
    <label>Term Id Platform</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>