force-app/main/default/objects/Opportunity/fields/Timeline_Target_Rating__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Target_Rating__c</fullName>
    <label>Timeline Target Rating</label>
    <type>Text</type>
    <length>255</length>
</CustomField>