force-app/main/default/objects/Opportunity/fields/Token_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Token_Efficiency__c</fullName>
    <label>Token Efficiency</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>