force-app/main/default/objects/Opportunity/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <type>Text</type>
    <length>255</length>
</CustomField>