force-app/main/default/objects/Opportunity/fields/Total_Calculated_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Calculated_Value__c</fullName>
    <description>Total calculated value from legacy system</description>
    <label>Total Calculated Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>