force-app/main/default/objects/Opportunity/fields/Total_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Total_Proposal__c</fullName>
    <label>Total Proposal</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>