force-app/main/default/objects/Opportunity/fields/Type_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Type_Efficiency__c</fullName>
    <label>Type Efficiency</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>