force-app/main/default/objects/Opportunity/fields/Verification__c.field-meta.xml
<CustomField>
    <fullName>Verification__c</fullName>
    <label>Verification</label>
    <type>Text</type>
    <length>255</length>
</CustomField>