force-app/main/default/objects/Opportunity/fields/Verification_Benchmark__c.field-meta.xml
<CustomField>
    <fullName>Verification_Benchmark__c</fullName>
    <label>Verification Benchmark</label>
    <type>Text</type>
    <length>255</length>
</CustomField>