force-app/main/default/objects/Opportunity/fields/Vintage_Data__c.field-meta.xml
<CustomField>
    <fullName>Vintage_Data__c</fullName>
    <label>Vintage Data</label>
    <type>Text</type>
    <length>255</length>
</CustomField>