force-app/main/default/objects/Opportunity/fields/Warning_Component_Total__c.field-meta.xml
<CustomField>
    <fullName>Warning_Component_Total__c</fullName>
    <label>Warning Component Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>