force-app/main/default/objects/Opportunity/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <label>Workflow</label>
    <type>Text</type>
    <length>255</length>
</CustomField>