force-app/main/default/objects/Opportunity/fields/Workflow_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Schedule__c</fullName>
    <label>Workflow Schedule</label>
    <type>Text</type>
    <length>255</length>
</CustomField>